--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "#utils/*": "./src/utils/*",
         "#middlewares/*": "./src/middlewares/*",
         "#controllers/*": "./src/controllers/*",
-        "#validation/*": "./src/validation/*"
+        "#validations/*": "./src/validations/*"
     },
     "scripts": {
         "dev": "node --watch src/index.js",
@@ -30,14 +30,17 @@
     "packageManager": "pnpm@10.16.1",
     "dependencies": {
         "@neondatabase/serverless": "^1.0.1",
+        "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
         "cors": "^2.8.5",
         "dotenv": "^17.2.2",
         "drizzle-orm": "^0.44.5",
         "express": "^5.1.0",
         "helmet": "^8.1.0",
+        "jsonwebtoken": "^9.0.2",
         "morgan": "^1.10.1",
-        "winston": "^3.17.0"
+        "winston": "^3.17.0",
+        "zod": "^4.1.9"
     },
     "devDependencies": {
         "@eslint/js": "^9.35.0",
