--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "#routes/*": "./src/routes/*",
         "#services/*": "./src/services/*",
         "#utils/*": "./src/utils/*",
-        "#middlewares/*": "./src/middlewares/*",
+        "#middleware/*": "./src/middleware/*",
         "#controllers/*": "./src/controllers/*",
         "#validations/*": "./src/validations/*"
     },
@@ -29,6 +29,8 @@
     "license": "ISC",
     "packageManager": "pnpm@10.16.1",
     "dependencies": {
+        "@arcjet/inspect": "1.0.0-beta.11",
+        "@arcjet/node": "1.0.0-beta.11",
         "@neondatabase/serverless": "^1.0.1",
         "bcrypt": "^6.0.0",
         "cookie-parser": "^1.4.7",
