--- a/.github/workflows/lint-and-format.yml
+++ b/.github/workflows/lint-and-format.yml
@@ -18,22 +18,27 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'npm'
+          cache: 'pnpm'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.16.1
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run ESLint
         run: |
-          if ! npm run lint; then
-            echo "::error::ESLint found issues. Run 'npm run lint:fix' to automatically fix some issues."
+          if ! pnpm run lint; then
+            echo "::error::ESLint found issues. Run 'pnpm run lint:fix' to automatically fix some issues."
             exit 1
           fi
 
       - name: Check Prettier formatting
         run: |
-          if ! npm run format:check; then
-            echo "::error::Code formatting issues found. Run 'npm run format' to fix formatting."
+          if ! pnpm run format:check; then
+            echo "::error::Code formatting issues found. Run 'pnpm run format' to fix formatting."
             exit 1
           fi
 
@@ -41,5 +46,5 @@ jobs:
         if: failure() && github.event_name == 'pull_request'
         run: |
           echo "::notice::If the workflow failed due to linting or formatting issues, you can fix them by running:"
-          echo "::notice::  npm run lint:fix  # Fix linting issues"
-          echo "::notice::  npm run format   # Fix formatting issues"
+          echo "::notice::  pnpm run lint:fix  # Fix linting issues"
+          echo "::notice::  pnpm run format   # Fix formatting issues"
