--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,15 +23,20 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
-          cache: 'npm'
+          cache: 'pnpm'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.16.1
 
       - name: Install dependencies
-        run: npm ci
+        run: pnpm install --frozen-lockfile
 
       - name: Run tests
         id: tests
         run: |
-          if npm test; then
+          if pnpm test; then
             echo "tests_passed=true" >> $GITHUB_OUTPUT
             echo "::notice::All tests passed successfully! ✅"
           else
@@ -85,5 +90,5 @@ jobs:
         if: failure()
         run: |
           echo "::error::Test execution failed. Please review the test output and fix any failing tests."
-          echo "::notice::To run tests locally, use: npm test"
+          echo "::notice::To run tests locally, use: pnpm test"
           echo "::notice::Make sure your environment variables are properly set: NODE_ENV=test, NODE_OPTIONS=--experimental-vm-modules"
