--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -19,14 +19,21 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.16.1
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'pnpm'
 
-      - name: Setup pnpm
-        run: corepack enable
+      - name: Verify pnpm installation
+        run: |
+          pnpm --version
+          which pnpm
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
